--- a/requirements.txt
+++ b/requirements.txt
@@ -16,15 +16,19 @@ django-grip==3.5.0
 django-oauth-toolkit==2.4.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+drf-yasg==1.21.7
 gripcontrol==4.2.0
 hyperlink==21.0.0
 idna==3.8
 incremental==24.7.2
+inflection==0.5.1
 jwcrypto==1.5.6
 MarkupSafe==2.1.5
 msgpack==1.0.8
 oauthlib==3.2.2
+packaging==24.1
 pillow==10.4.0
+psycopg2-binary==2.9.9
 pubcontrol==3.5.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
@@ -32,6 +36,7 @@ pycparser==2.22
 PyJWT==2.9.0
 pyOpenSSL==24.2.1
 pytz==2024.1
+PyYAML==6.0.2
 redis==5.0.8
 requests==2.32.3
 service-identity==24.1.0
@@ -41,7 +46,7 @@ tomli==2.0.1
 Twisted==24.7.0
 txaio==23.1.1
 typing_extensions==4.12.2
+uritemplate==4.1.1
 urllib3==2.2.2
 Werkzeug==3.0.4
 zope.interface==7.0.1
-psycopg2-binary>=2.9
